# pico-test

./: CMakeLists.txt  README.md  main.c  tusb_config.h
.github/workflows/: build.yml
